--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,30 @@
-.App {
+.app-wrapper {
   text-align: center;
-}
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
+  display: grid;
+  grid-template-areas: 
+  "header header header"
+  "nav content content"
+  "footer footer footer";
+  grid-template-rows: 100px 1fr 60px;
+  grid-template-columns: 200px 1fr;
+  grid-gap: 40px;
+  margin: 0 auto;
+  padding:0 10px;
   min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  width: 100%;
+  max-width: 1024px;
+  color: rgb(147, 242, 5);
 }
 
-.App-link {
-  color: #61dafb;
+.app-wrapper>* {
+  border: 2px solid rgb(147, 242, 5);
+  background-color: rgb(0, 0, 0);
+  box-shadow: 0 0 1px 2px black,
+  20px 15px 20px -4px darkolivegreen;
+  padding: 15px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.app-content {
+  grid-area: content;
 }
